--- a/Trabajo Req/Trabajo Req/Implementacion10/PIM/PIM/PIM.csproj
+++ b/Trabajo Req/Trabajo Req/Implementacion10/PIM/PIM/PIM.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A092E83C-3637-4565-AEA4-0F255AE21E54}</ProjectGuid>
+    <ProjectGuid>{F6BF61A0-A7CA-46C3-9F2A-7B829BDDC453}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PIM</RootNamespace>
     <AssemblyName>PIM</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,18 +32,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    <Reference Include="MySql.Data, Version=9.1.0.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\MySQL\MySQL Connector NET 9.1\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,26 +52,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Atributo.cs">
-      <DependentUpon>BD.tt</DependentUpon>
+    <Compile Include="Atributo.cs" />
+    <Compile Include="Categoria.cs" />
+    <Compile Include="ConexionMySQL.cs" />
+    <Compile Include="Connection.cs" />
+    <Compile Include="Consulta.cs" />
+    <Compile Include="CrearAtributo.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BD.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>BD.Context.tt</DependentUpon>
+    <Compile Include="CrearAtributo.Designer.cs">
+      <DependentUpon>CrearAtributo.cs</DependentUpon>
     </Compile>
-    <Compile Include="BD.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>BD.tt</DependentUpon>
+    <Compile Include="CrearCategoria.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BD.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>BD.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Categoria.cs">
-      <DependentUpon>BD.tt</DependentUpon>
+    <Compile Include="CrearCategoria.Designer.cs">
+      <DependentUpon>CrearCategoria.cs</DependentUpon>
     </Compile>
     <Compile Include="CrearProducto.cs">
       <SubType>Form</SubType>
@@ -80,22 +75,88 @@
     <Compile Include="CrearProducto.Designer.cs">
       <DependentUpon>CrearProducto.cs</DependentUpon>
     </Compile>
+    <Compile Include="ListarAtributo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListarAtributo.Designer.cs">
+      <DependentUpon>ListarAtributo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListarCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListarCategoria.Designer.cs">
+      <DependentUpon>ListarCategoria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListarProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListarProducto.Designer.cs">
+      <DependentUpon>ListarProducto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarAtributo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarAtributo.Designer.cs">
+      <DependentUpon>ModificarAtributo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarCategoria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarCategoria.Designer.cs">
+      <DependentUpon>ModificarCategoria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarProducto.Designer.cs">
+      <DependentUpon>ModificarProducto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MostrarProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MostrarProducto.Designer.cs">
+      <DependentUpon>MostrarProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="PantallaPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PantallaPrincipal.Designer.cs">
       <DependentUpon>PantallaPrincipal.cs</DependentUpon>
     </Compile>
-    <Compile Include="Producto.cs">
-      <DependentUpon>BD.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Producto.cs" />
+    <Compile Include="ProductoCategoria.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValorAtributo.cs">
-      <DependentUpon>BD.tt</DependentUpon>
-    </Compile>
+    <Compile Include="ValorAtributo.cs" />
+    <EmbeddedResource Include="CrearAtributo.resx">
+      <DependentUpon>CrearAtributo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CrearCategoria.resx">
+      <DependentUpon>CrearCategoria.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CrearProducto.resx">
       <DependentUpon>CrearProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListarAtributo.resx">
+      <DependentUpon>ListarAtributo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListarCategoria.resx">
+      <DependentUpon>ListarCategoria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListarProducto.resx">
+      <DependentUpon>ListarProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarAtributo.resx">
+      <DependentUpon>ModificarAtributo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarCategoria.resx">
+      <DependentUpon>ModificarCategoria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarProducto.resx">
+      <DependentUpon>ModificarProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MostrarProducto.resx">
+      <DependentUpon>MostrarProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PantallaPrincipal.resx">
       <DependentUpon>PantallaPrincipal.cs</DependentUpon>
@@ -108,25 +169,8 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <EntityDeploy Include="BD.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>BD.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="BD.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>BD.edmx</DependentUpon>
-      <LastGenOutput>BD.Context.cs</LastGenOutput>
-    </None>
-    <None Include="BD.edmx.diagram">
-      <DependentUpon>BD.edmx</DependentUpon>
-    </None>
-    <None Include="BD.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>BD.edmx</DependentUpon>
-      <LastGenOutput>BD.cs</LastGenOutput>
-    </None>
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -141,7 +185,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+    <None Include="Resources\TituloPlytix.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
