--- a/PIM/PIM/App.config
+++ b/PIM/PIM/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="grupo17_DBEntities" connectionString="metadata=res://*/BD.csdl|res://*/BD.ssdl|res://*/BD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=grupo17_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="grupo17_DB" connectionString="metadata=res://*/DB.csdl|res://*/DB.ssdl|res://*/DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=grupo17_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
