--- a/PIM/PIM/PIM.csproj
+++ b/PIM/PIM/PIM.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A092E83C-3637-4565-AEA4-0F255AE21E54}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PIM</RootNamespace>
     <AssemblyName>PIM</AssemblyName>
@@ -80,6 +80,12 @@
     <Compile Include="CrearProducto.Designer.cs">
       <DependentUpon>CrearProducto.cs</DependentUpon>
     </Compile>
+    <Compile Include="CrearRelacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CrearRelacion.Designer.cs">
+      <DependentUpon>CrearRelacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListarAtributo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +103,12 @@
     </Compile>
     <Compile Include="ListarProducto.Designer.cs">
       <DependentUpon>ListarProducto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListarRelacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListarRelacion.Designer.cs">
+      <DependentUpon>ListarRelacion.cs</DependentUpon>
     </Compile>
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
@@ -131,6 +143,12 @@
     <Compile Include="ModificarProducto.Designer.cs">
       <DependentUpon>ModificarProducto.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModificarRelacion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarRelacion.Designer.cs">
+      <DependentUpon>ModificarRelacion.cs</DependentUpon>
+    </Compile>
     <Compile Include="MostrarProducto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +166,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relacion.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="ValorAtributo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -160,6 +184,9 @@
     <EmbeddedResource Include="CrearProducto.resx">
       <DependentUpon>CrearProducto.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CrearRelacion.resx">
+      <DependentUpon>CrearRelacion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ListarAtributo.resx">
       <DependentUpon>ListarAtributo.cs</DependentUpon>
     </EmbeddedResource>
@@ -168,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ListarProducto.resx">
       <DependentUpon>ListarProducto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListarRelacion.resx">
+      <DependentUpon>ListarRelacion.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModificarAtributo.resx">
       <DependentUpon>ModificarAtributo.cs</DependentUpon>
