--- a/PIM/PIM/PIM.csproj
+++ b/PIM/PIM/PIM.csproj
@@ -41,6 +41,10 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -85,6 +89,9 @@
     </Compile>
     <Compile Include="CrearRelacion.Designer.cs">
       <DependentUpon>CrearRelacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Cuenta.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="ListarAtributo.cs">
       <SubType>Form</SubType>
@@ -149,6 +156,12 @@
     <Compile Include="ModificarRelacion.Designer.cs">
       <DependentUpon>ModificarRelacion.cs</DependentUpon>
     </Compile>
+    <Compile Include="MostrarInformacionCuenta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MostrarInformacionCuenta.Designer.cs">
+      <DependentUpon>MostrarInformacionCuenta.cs</DependentUpon>
+    </Compile>
     <Compile Include="MostrarProducto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -210,6 +223,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ModificarRelacion.resx">
       <DependentUpon>ModificarRelacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MostrarInformacionCuenta.resx">
+      <DependentUpon>MostrarInformacionCuenta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MostrarProducto.resx">
       <DependentUpon>MostrarProducto.cs</DependentUpon>
